[package]
name = "movie-night-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["openssl"] }
clap = { version = "4.5.26", features = ["derive"] }
openssl = "0.10.71"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
uuid = { version = "1.12.1", features = ["fast-rng", "v4"] }
